apply JPMS plugin